[package]
name = "egui-action-macro"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for egui-action crate"
license = "MIT"
repository = "https://github.com/Keivry/egui-action"
keywords = ["egui", "action", "macro", "proc-macro"]
categories = ["gui"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
egui-action = { git = "https://github.com/Keivry/egui-action.git", branch = "main" }
